--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,18 +4,26 @@ on:
   workflow_dispatch: {}
   push:
     branches:
-      - master
+      - main
 
 jobs:
-  buildx:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: alpine
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v1
-        id: buildx
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          install: true
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build
-        run: ./build.sh
+        run: ./build.sh --multi-arch --push
