--- a/zrepl/Dockerfile
+++ b/zrepl/Dockerfile
@@ -1,10 +1,13 @@
-ARG VERSION=v0.4.0
-ARG ARCH=amd64
+FROM --platform=$BUILDPLATFORM alpine:3 as builder
 
-FROM alpine:3 as builder
+ARG ZREPL_VERSION
+ARG TARGETARCH
+ARG TARGETVARIANT
+ENV TARGET="$TARGETARCH$TARGETVARIANT"
+
 RUN apk add --no-cache curl
 RUN mkdir -p /root/usr/local/bin/
-RUN curl -L -o /root/usr/local/bin/zrepl "https://github.com/zrepl/zrepl/releases/download/$VERSION/zrepl-linux-$ARCH"
+RUN curl -L --fail -o /root/usr/local/bin/zrepl "https://github.com/zrepl/zrepl/releases/download/$ZREPL_VERSION/zrepl-linux-$TARGET"
 
 FROM alpine:3 as image
 COPY --from=builder /root /
